-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17
-
Component/s: client-libs
-
b07
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8264646 | 15.0.4 | Vladimir Kempik | P3 | Resolved | Fixed | b01 |
| JDK-8264911 | 13.0.8 | Vladimir Kempik | P3 | Resolved | Fixed | b01 |
| JDK-8261700 | 11.0.12-oracle | Dukebot | P3 | Resolved | Fixed | b01 |
| JDK-8267491 | 11.0.12 | Vladimir Kempik | P3 | Resolved | Fixed | b04 |
These : which add no value to the direct JNI call and can be directly replaced
JNFNewGlobalRef
JNFDeleteGlobalRef
JNFNewWeakGlobalRef
JNFDeleteWeakGlobalRef
And these which just require a bit of extra handling because they create Cocoa class instances that will ensure the Java Refs are cleared when the carrier object is freed.
JNFJObjectWrapper
JNFWeakJObjectWrapper
There seem to be simpler ways to free all the cases we have.
- backported by
-
JDK-8261700 [macOS] Remove desktop module dependencies on JNF Reference APIs
-
- Resolved
-
-
JDK-8264646 [macOS] Remove desktop module dependencies on JNF Reference APIs
-
- Resolved
-
-
JDK-8264911 [macOS] Remove desktop module dependencies on JNF Reference APIs
-
- Resolved
-
-
JDK-8267491 [macOS] Remove desktop module dependencies on JNF Reference APIs
-
- Resolved
-
- relates to
-
JDK-8257852 ☂ : Remove JNF dependencies from java.desktop module
-
- Closed
-
- links to
-
Commit
openjdk/jdk13u-dev/df2818b9
-
Commit
openjdk/jdk15u-dev/1f140666
-
Commit
openjdk/jdk/92c2f084
-
Review
openjdk/jdk13u-dev/177
-
Review
openjdk/jdk15u-dev/12
-
Review
openjdk/jdk/2133