8259869: [macOS] Remove desktop module dependencies on JNF Reference APIs