src/java.desktop/macosx/native/libawt_lwawt/java2d/opengl/CGLLayer.m
@@ -47,7 +47,7 @@ extern NSOpenGLContext *sharedContext;
 @synthesize jrsRemoteLayer;
 #endif
 
-- (id) initWithJavaLayer:(JNFWeakJObjectWrapper *)layer;
+- (id) initWithJavaLayer:(jobject)layer;
 {
 AWT_ASSERT_APPKIT_THREAD;
     // Initialize ourselves
@@ -84,6 +84,8 @@ AWT_ASSERT_APPKIT_THREAD;
 }
 
 - (void) dealloc {
+    JNIEnv *env = [ThreadUtilities getJNIEnvUncached];
+    (*env)->DeleteWeakGlobalRef(env, self.javaLayer);
     self.javaLayer = nil;
     [super dealloc];
 }
@@ -138,7 +140,7 @@ AWT_ASSERT_APPKIT_THREAD;
     DECLARE_CLASS(jc_JavaLayer, "sun/java2d/opengl/CGLLayer");
     DECLARE_METHOD(jm_drawInCGLContext, jc_JavaLayer, "drawInCGLContext", "()V");
 
-    jobject javaLayerLocalRef = [self.javaLayer jObjectWithEnv:env];
+    jobject javaLayerLocalRef = (*env)->NewLocalRef(env, self.javaLayer);
     if ((*env)->IsSameObject(env, javaLayerLocalRef, NULL)) {
         return;
     }
@@ -177,7 +179,7 @@ Java_sun_java2d_opengl_CGLLayer_nativeCreateLayer
 
 JNI_COCOA_ENTER(env);
 
-    JNFWeakJObjectWrapper *javaLayer = [JNFWeakJObjectWrapper wrapperWithJObject:obj withEnv:env];
+    jobject javaLayer = (*env)->NewWeakGlobalRef(env, obj);
 
     [ThreadUtilities performOnMainThreadWaiting:YES block:^(){
             AWT_ASSERT_APPKIT_THREAD;
